--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseurl: 'https://www.paritosh.dev'
+baseurl: 'http://www.pottoin.com'
 languageCode: en-us
 title: "Paritosh Baghel"
 googleAnalytics: ""
